--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <div class="social-main ">
             <p class="p">Contact us </p>
             <a href="#" class="fa fa-facebook"></a>
-            <a href="https://twitter.com/PNuwasasira" class="fa fa-twitter"></a>
-            <a href="https://www.linkedin.com/in/-nu-699aa4207/" class="fa fa-linkedin"></a>
+            <a href="# class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
             <a href="#" class="fa fa-instagram"></a>
 
 
