--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <ul class="nav__list">
-                <a href="home" class="login">Home</a>
+                <a href="#" class="login">Home</a>
                 <!-- <a href="shop" class="login">Shop</a> -->
                 <a href="http://127.0.0.1:5500/login.html" class="login">Login</a>
                 <div class="cart__icon">
