--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
             <ul class="nav__list">
                 <a href="#" class="login">Home</a>
-                <!-- <a href="shop" class="login">Shop</a> -->
-                <a href="http://127.0.0.1:5500/login.html" class="login">Login</a>
+                <a href="#" class="login">Login</a>
                 <div class="cart__icon">
                     <h2>cart</h2>
                     <span class="item__total">0</span>
